@@ -2229,8 +2229,7 @@ FUNCTION(fun_attrib_set)
 /* ARGSUSED */
 FUNCTION(fun_tel)
 {
-  int silent = 0;
-  int inside = 0;
+  int flags = TEL_DEFAULT;
   if (!FUNCTION_SIDE_EFFECTS) {
     safe_str(T(e_disabled), buff, bp);
     return;
@@ -2240,11 +2239,12 @@ FUNCTION(fun_tel)
     safe_str(T(e_perm), buff, bp);
     return;
   }
-  if (nargs > 2)
-    silent = parse_boolean(args[2]);
-  if (nargs > 3)
-    inside = parse_boolean(args[3]);
-  do_teleport(executor, args[0], args[1], silent, inside, pe_info);
+  if (nargs > 2 && parse_boolean(args[2]))
+    flags |= TEL_SILENT;
+  if (nargs > 3 && parse_boolean(args[3]))
+    flags |= TEL_INSIDE;
+
+  do_teleport(executor, args[0], args[1], flags, pe_info);
 }
 
 
