@@ -24,6 +24,8 @@ Major changes:
 Commands:
  * @dolist now accepts /inline and related switches, like @switch does.
    Suggested by Reaver. [MG]
+ * @teleport/list teleports a list of objects to a single destination.
+   Suggested by Nyssa, [MUX]. [MG]
 
 Functions:
  * lpids()' second argument has been altered slightly, to allow you to list
